# fastapi-project

./: .env  .gitignore  .pre-commit-config.yaml  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 674855d239d3_add_major_to_student.py  d8566d5294d9_initial_migration.py
src/: crud.py  deps.py  environment.py  main.py  models.py  schemas.py
src/core/: db.py
src/routers/: students.py
src/utils/: get_status_code.py
tests/: test_api.py  test_crud.py  test_main.py
