[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = ["Radosław Głogowski <radoslaw.glogowski@gu243.ad.grapeup.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
pydantic = "^2.9.2"
mypy = "^1.11.2"
sqlalchemy = "^2.0.35"
psycopg2-binary = "^2.9.9"
isort = "^5.13.2"
flake8 = "^7.1.1"
alembic = "^1.13.3"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
flake8-pyproject = "*"
pre-commit = "*"
pytest = "*"
pytest-asyncio = "*"
requests = "*"
isort = "*"
mypy = "*"
pytest-mock = "*"
types-requests = "^2.32.0.20240712"
boto3-stubs = "^1.34.158"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
skip_glob = ["migrations", "**/__init__.py"]
line_length = 119
skip_gitignore = true
known_first_party = ["src", "integration"]
force_sort_within_sections = true

[tool.flake8]
# E266 - too many leading '#' for block comment
# W503 - line break before binary operator
# E712 - https://www.flake8rules.com/rules/E712.html
# E731 - https://www.flake8rules.com/rules/E731.html
ignore = ["E266", "W503", "E712", "E731", "E231"]
exclude =[
    "venv",
    "*.txt",
]
max-line-length = 119
# McCabe complexity threshold
max-complexity = 18
# select errors and warnings to enable which are off by default
select = ["B", "C", "E", "F", "W", "T4", "B9"]

[tool.mypy]
python_version = "3.12"
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]
strict = true
show_error_codes = true
enable_incomplete_feature = ["NewGenericSyntax"]
exclude = ["alembic"]